# label-ocr-app

./: PROJECT_SPECIFICATION.md  index.html  package-lock.json  package.json  vite.config.ts
label_ocr_app/: README.md  pubspec.yaml
label_ocr_app/android/app/: build.gradle.kts
label_ocr_app/ios/Runner/: Info.plist
label_ocr_app/ios/Runner.xcodeproj/: project.pbxproj
label_ocr_app/lib/: main.dart
label_ocr_app/lib/app/: routes.dart
label_ocr_app/lib/components/: confidence_pill.dart  emoji_picker.dart  navbar.dart
label_ocr_app/lib/models/: ocr_result.dart  scan_record.dart  template.dart
label_ocr_app/lib/screens/: scan_screen.dart  template_list_screen.dart  template_screen.dart
label_ocr_app/lib/services/: camera_service.dart  image_service.dart  ocr_service.dart  storage_service.dart
label_ocr_app/lib/utils/: constants.dart  coordinate_utils.dart
label_ocr_app/linux/: CMakeLists.txt
label_ocr_app/linux/runner/: my_application.cc
label_ocr_app/macos/Runner.xcodeproj/: project.pbxproj
label_ocr_app/test/: widget_test.dart
label_ocr_app/web/: index.html  manifest.json
label_ocr_app/windows/: CMakeLists.txt
label_ocr_app/windows/runner/: Runner.rc  main.cpp
src/: main.ts  vue-shim.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: camera.rs  db.rs  lib.rs  main.rs
src/app/: App.vue
src/app/components/: ConfidencePill.vue  EmojiPicker.vue  Navbar.vue
src/app/data/: constants.ts
src/app/router/: index.ts
src/app/screens/: ScanScreen.vue  TemplateScreen.vue  (+1 more)
src/services/: camera.ts  file.ts
src/styles/: theme.css
(+6 files in other folders)
